Fix landing page layout alignment.

--- a/app/assets/stylesheets/angular/angular.css.scss
+++ b/app/assets/stylesheets/angular/angular.css.scss
@@ -62,6 +62,15 @@ body {
     @include respond-to(handhelds) { font-size: 18px; }
   }
 
+  #main {
+    @include transition();
+
+    width: 100%;
+
+    @include respond-to(desktops) { padding-left: $nav-width-desktops; @include calc(width, '100% - #{$nav-width-desktops}'); };
+    @include respond-to(widescreens) { padding-left: $nav-width-widescreens; @include calc(width, '100% - #{$nav-width-widescreens}'); }
+  }
+
   #mainMenuLink {
     @include transition();
 
